--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/owl.carousel.min.css">
       <link rel="stylesheet" href="css/owl.theme.default.min.css">
-      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+      <!-- Google fonts integration -->
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
       <title>Guyon | Home</title>
    </head>
    <body>
@@ -437,7 +438,7 @@
                <div class="col-md-12">
                   <div class="heading03">
                      <h2>
-                        Pricing Packages
+                        What others are saying
                      </h2>
                      <p>
                         Lorem ipsum dolor sit amet proin gravida nibh vel velit
@@ -450,30 +451,165 @@
             </div>
             <div class="row">
                <div class="col-md-12">
-               <div id="carousel">
-                  <div class="media">
-                     <a href="#"><img src="images/card.png" class="mr-1" alt="..."></a>
+                  <div id="carousel">
+                     <div class="media">
+                        <a href="#"><img src="images/card.png" class="mr-1" alt="..."></a>
+                     </div>
+                     <div class="media">
+                        <a href="#"><img src="images/card.png" class="mr-2" alt="..."></a>
+                     </div>
+                     <div class="media">
+                        <a href="#"><img src="images/card.png" class="mr-3" alt="..."></a>
+                     </div>
                   </div>
-                  <div class="media">
-                     <a href="#"><img src="images/card.png" class="mr-2" alt="..."></a>
-                  </div>
-                  <div class="media">
-                     <a href="#"><img src="images/card.png" class="mr-3" alt="..."></a>
-                  </div>
-               </div>
                </div>
             </div>
          </div>
       </section>
       <!-- testimonial section ends -->
+      <!-- App news section starts -->
+      <section class="app-news">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="heading04">
+                     <h2>
+                        What others are saying
+                     </h2>
+                     <p>
+                        Lorem ipsum dolor sit amet proin gravida nibh vel velit
+                     </p>
+                     <div class="line">
+                        <!-- creating a line -->
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-md-4">
+                  <div class="card">
+                     <img src="images/r1.png" class="card-img-top" alt="...">
+                     <div class="card-body">
+                        <h4 class="card-title">Consectetuer adipiscing elit</h4>
+                        <p class="date">Posted On 25th September 2014</p>
+                        <p class="text">Your project looks great on any device. Content can be easily read and a user understands freely what you wanted to say him or her.
+                        </p>
+                        <a href="#" class="btn btn-primary">Read more</a>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-4">
+                  <div class="card">
+                     <img src="images/r2.png" class="card-img-top" alt="...">
+                     <div class="card-body">
+                        <h4 class="card-title">Consectetuer adipiscing elit</h4>
+                        <p class="date">Posted On 25th September 2014</p>
+                        <p class="text">Your project looks great on any device. Content can be easily read and a user understands freely what you wanted to say him or her.
+                        </p>
+                        <a href="#" class="btn btn-primary">Read more</a>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-4">
+                  <div class="card">
+                     <img src="images/r3.png" class="card-img-top" alt="...">
+                     <div class="card-body">
+                        <h4 class="card-title">Consectetuer adipiscing elit</h4>
+                        <p class="date">Posted On 25th September 2014</p>
+                        <p class="text">Your project looks great on any device. Content <br>can be easily read and a user understands <br>freely what you wanted to say him or her.
+                        </p>
+                        <a href="#" class="btn btn-primary">Read more</a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- App news section ends -->
+      <!-- App store section starts -->
+      <section class="app-store">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="heading05">
+                     <h2>
+                        Download our app from
+                     </h2>
+                     <p>
+                        A better way to present your app using fully featured appsperia template. 
+                        <br>Now available on the App Store and Play Store!
+                     </p>
+                     <div class="line">
+                        <!-- creating a line -->
+                     </div>
+                     <ul>
+                        <li>
+                           <a href="#" class="btn btn-primary">
+                           <i class="fa fa-apple" aria-hidden="true"></i>app store
+                           </a>
+                        </li>
+                        <li>
+                           <a href="#" class="btn btn-info">
+                           <i class="fa fa-android" aria-hidden="true"></i>play store
+                           </a>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- App store section ends -->
    </body>
-   <footer></footer>
+   <footer>
+      <section class="foot">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-6">
+                  <div class="contact-us">
+                     <h2>
+                        Contact Us
+                     </h2>
+                     <p class="msg">
+                        Tempora similique excepturi obcaecati, maiores nostrum esse illo in soluta <br>at saepe perspiciatis eos quasi laudantium sunt ad quaerat?
+                     </p>
+                     <div class="media">
+                        <img src="images/loc.png" class="mr-1" alt="...">
+                        <div class="media-body">
+                           <p>
+                              (977) 324 644 676 / <br>(800) 123 456 789
+                           </p>
+                        </div>
+                     </div>
+                     <div class="media">
+                        <img src="images/mail.png" class="mr-2" alt="...">
+                        <div class="media-body">
+                           <p>
+                              (977) 324 644 676 / <br>(800) 123 456 789
+                           </p>
+                        </div>
+                     </div>
+                     <div class="media">
+                        <img src="images/home.png" class="mr-3" alt="...">
+                        <div class="media-body">
+                           <p>
+                              (977) 324 644 676 / <br>(800) 123 456 789
+                           </p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-6">
+               </div>
+            </div>
+         </div>
+      </section>
+   </footer>
    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/owl.carousel.min.js"></script>
-   <!-- <script src="js/jquery.min.js"></script> -->
    <!-- <script> 
       var myVideo = document.getElementById("video1"); 
       
@@ -513,11 +649,11 @@
    <script type="text/javascript">
       $(document).ready(function() {
         $("#carousel01").waterwheelCarousel({
-          // include options like this:
-          // (use quotes only for string values, and no trailing comma after last option)
-          // option: value,
-          // option: value
-       });
+                // include options like this:
+                // (use quotes only for string values, and no trailing comma after last option)
+                // option: value,
+                // option: value
+             });
       });
    </script>
    <script type="text/javascript">
