--- a/index.html
+++ b/index.html
@@ -28,38 +28,38 @@
                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                            <li class="nav-item active">
-                              <a class="nav-link" href="#">Home</a>
+                              <a class="nav-link" href="#home">Home</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">FEATURES</a>
+                              <a class="nav-link" href="#feature">FEATURES</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">ABOUT</a>
+                              <a class="nav-link" href="#about">ABOUT</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">VIDEO</a>
+                              <a class="nav-link" href="#video">VIDEO</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Screenshots</a>
+                              <a class="nav-link" href="#screen">Screenshots</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Pricing</a>
+                              <a class="nav-link" href="#price">Pricing</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Clients</a>
+                              <a class="nav-link" href="#client">Clients</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Blog</a>
+                              <a class="nav-link" href="#blog">Blog</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Contact</a>
+                              <a class="nav-link" href="#contact">Contact</a>
                            </li>
                         </ul>
                      </div>
                   </nav>
                </div>
             </div>
-            <div class="row">
+            <div class="row" id="home">
                <div class="col-md-6">
                </div>
                <div class="col-md-6">
@@ -78,7 +78,7 @@
             </div>
          </div>
       </header>
-      <section class="feature">
+      <section class="feature" id="feature">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -153,7 +153,7 @@
             </div>
          </div>
       </section>
-      <section class="about-section">
+      <section class="about-section" id="about">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -235,7 +235,7 @@
          </div>
       </section>
       <!-- video section starts -->
-      <section class="video-section">
+      <section class="video-section" id="video">
          <!-- <i class="btn btn-primary" onclick=""><img src="images/play.png" alt=""></i> -->
          <video id="video1" autoplay muted>
             <source src="images/vid.mp4" type="video/mp4">
@@ -243,7 +243,7 @@
       </section>
       <!-- video section ends -->
       <!-- screenshots section starts -->
-      <section class="ss">
+      <section class="ss" id="screen">
          <div class="container">
             <div class="row">
                <div class="col-md-6">
@@ -316,7 +316,7 @@
       </section>
       <!-- screenshots section ends -->
       <!-- pricing section starts -->
-      <section class="price-section">
+      <section class="price-section" id="price">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -432,7 +432,7 @@
       </section>
       <!-- pricing section ends -->
       <!-- testimonial section starts -->
-      <section class="testimonial">
+      <section class="testimonial" id="client">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -468,7 +468,7 @@
       </section>
       <!-- testimonial section ends -->
       <!-- App news section starts -->
-      <section class="app-news">
+      <section class="app-news" id="blog">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -562,7 +562,7 @@
       <!-- App store section ends -->
    </body>
    <footer>
-      <section class="foot">
+      <section class="foot" id="contact">
          <div class="container">
             <div class="row">
                <div class="col-md-7">
